# ImGraph

./: .clang-format  .gitignore  CMakeLists.txt  DESMOS_FEATURES.md  README.md  template.sublime-project
cmake/: CompilerWarnings.cmake
src/core/: CMakeLists.txt
src/core/Core/: Application.cpp  Application.hpp  Window.cpp  funcs.hpp
